--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         });
         //Tab zur Grundlagenseite//
         $(document).ready(function () {
-            $("#grundlagen").click(function () {
-                $("#mainframe").attr("src", "./pages/basic.html");
+            $("#basics").click(function () {
+                $("#mainframe").attr("src", "./pages/basics.html");
                 $("#basics").attr("class", "current");
                 $("#introduction").attr("class", "");
             });
