--- a/pages/basics.html
+++ b/pages/basics.html
@@ -36,4 +36,4 @@
     wie Steam oder itch.io bekannt zu werden. Was auch immer dein Ziel ist: Godot hilft dir, es zu erreichen. Und das Beste daran? Du hast die volle Kontrolle über dein Projekt und 
     kannst es genauso umsetzen, wie du es willst.</span>
 
-    <div clas="justatest"></div>d
+    <div clas="justatest"></div>
